--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
 <main class="container">
-    <h1>Ansatzpunkte für Mensch-Maschine Interaktion</h1>
+    <h1>Mensch-Maschine Interaktion zwischen Kreation/ Reproduktion und Synchronität/ Asynchronität</h1>
 
     <h2>1. Reproduktion und asynchron: Lehrmaterialersteller*in</h2>
     <article>
         <p>
-            <strong>Grundidee:</strong> KI unterstützt bei der Erstellung und Aufbereitung von Lehrmaterialien, um Wissen strukturiert zu vermitteln.
+            <strong>Grundidee:</strong> KI unterstützt bei der Erstellung und Aufbereitung von Lehrmaterialien, um Wissen strukturiert zu vermitteln. Dabei können insbesondere auch personalisierte Materialien generiert werden. Hilfreich ist es, bestehende Inhalte in den Prompt zu integrieren, so dass diese den Anforderungen entsprechend aufbereitet werden.
         </p>
     </article>
     <details>
         <summary>Exemplarische Prompts</summary>
         <ul>
-            <li>Erstelle eine Zusammenfassung der wichtigsten Theorien zu [Thema] in maximal 300 Wörtern.</li>
-            <li>Generiere 10 Multiple-Choice-Fragen mit jeweils vier Antwortmöglichkeiten zu [Thema] für eine Selbstlerneinheit.</li>
-            <li>Formuliere ein Glossar mit 15 zentralen Begriffen zu [Fachgebiet] und definiere sie jeweils in zwei Sätzen.</li>
-            <li>Erstelle eine Übersichtstabelle mit den Gemeinsamkeiten und Unterschieden zwischen [Theorie A] und [Theorie B].</li>
+            <li>Erstelle eine Zusammenfassung der wichtigsten Theorien zu [Thema] in maximal 300 Wörtern und in einfacher Sprache.</li>
+            <li>Generiere 10 Multiple-Choice-Fragen mit jeweils vier Antwortmöglichkeiten zu [Thema] für eine Selbstlerneinheit zu dem folgendes Videotranskript. [Transkript einfügen].</li>
+            <li>Formuliere ein Glossar zu den folgenden 15 Begriffen: [Begriffe einfügen] aus dem Themengebiet [Themengebiet einfügen]. Zielgruppe sind Studierende in den Anfangssemestern. Hier ist ein Muster für den ersten Begriff: [Muster]. Orientiere dich für die weiteren Begriffe daran.</li>
+            <li>Erstelle eine Übersichtstabelle mit den Gemeinsamkeiten und Unterschieden zwischen [Theorie A] und [Theorie B]. Verwende dazu die beigefügten Texte.</li>
             <li>Schreibe eine Übungsaufgabe mit Musterlösung zu [Thema], die Studierende zur Vertiefung nutzen können.</li>
         </ul>
     </details>
@@ -30,34 +30,31 @@
     <h2>2. Reproduktion und synchron: Lerntutor*in</h2>
     <article>
         <p>
-            <strong>Grundidee:</strong> Die KI agiert als interaktive Tutorin, beantwortet Fragen, erklärt Konzepte und gibt Rückmeldungen in Echtzeit.
+            <strong>Grundidee:</strong> Die KI agiert als interaktive Tutorin, beantwortet Fragen, erklärt Konzepte und gibt Rückmeldungen in Echtzeit. Hier interagieren Lernende direkt mit der KI. Sie selbst oder lehrende Personen können Musterlösungen ergänzen.
         </p>
     </article>
     <details>
         <summary>Exemplarische Prompts</summary>
         <ul>
-            <li>Erkläre mir [Thema], so als wäre ich eine Person ohne Vorwissen.</li>
-            <li>Stelle mir fünf Verständnisfragen zu [Thema] und gib mir nach jeder Antwort ein Feedback.</li>
-            <li>Gib mir eine schrittweise Anleitung, wie ich [mathematische/technische/analytische Methode] anwenden kann.</li>
-            <li>Lass uns ein Quiz spielen: Stelle mir eine Frage zu [Thema], warte auf meine Antwort und sag mir, ob sie richtig oder falsch ist.</li>
-            <li>Vergleiche [Begriff A] und [Begriff B] in maximal fünf Sätzen.</li>
+            <li>Erkläre mir [Thema], so als wäre ich eine Person ohne Vorwissen. Gib mir immer nur eine kurze Info und lasse mich dann nachfragen.</li>
+            <li>Stelle mir nacheinander fünf Verständnisfragen zu diesem wissenschaftlichen Artikel [Artikel einfügen] und gib mir nach jeder Antwort ein Feedback.</li>
+            <li>Ich bin Studentin der Sozialwissenschaften und möchte eine qualitative Befragung durchführen. Meine Forschungsfrage lautet [Forschungsfrage einfügen]. Begleite mich Schritt für Schritt durch die Konzeption und die Durchführung.</li>
+            <li>Lass uns ein Quiz spielen: Stelle mir eine Frage zu [Thema], warte auf meine Antwort und sag mir, ob sie richtig oder falsch ist. Nutze die folgenden Dokumente als inhaltliche Grundlage [Dokumente einfügen]</li>
+            <li>Stell dir vor du bist Betreuer meiner Hausarbeit. Dir sind folgende Kriterien wichtig [Kriterien einfügen]. Ich teile mit dir immer Abschnitt für Abschnitt meiner ersten Version der Hausarbeit. Du gibst basierend auf den Kriterien Verbesserungsvorschläge.</li>
         </ul>
     </details>
 
     <h2>3. Kreation und asynchron: Impulsgeber*in</h2>
     <article>
         <p>
-            <strong>Grundidee:</strong> KI liefert kreative Denkanstöße, alternative Perspektiven und neue Ideen für Lern- und Lehrkontexte.
+            <strong>Grundidee:</strong> KI liefert kreative Denkanstöße, alternative Perspektiven und neue Ideen für Lern- und Lehrkontexte. Mit diesen Impulsen können Einzelpersonen oder Lerngruppen dann in Interaktion treten.
         </p>
     </article>
     <details>
         <summary>Exemplarische Prompts</summary>
         <ul>
-            <li>Erfinde eine fiktive Debatte zwischen zwei Wissenschaftler*innen zu [Thema], mit jeweils gegensätzlichen Positionen.</li>
-            <li>Generiere eine Liste von fünf kreativen Aufgaben, mit denen Studierende [Thema] auf neue Weise erschließen können.</li>
-            <li>Erstelle ein Gedankenexperiment, das Studierende dazu bringt, über [Problemstellung] kritisch nachzudenken.</li>
-            <li>Entwickle ein interaktives Planspiel, bei dem Studierende eine Entscheidung zu [Thema] treffen müssen und die Konsequenzen erleben.</li>
-            <li>Formuliere fünf provokante Thesen zu [Thema], die eine kontroverse Diskussion in einem Seminar anregen könnten.</li>
+            <li>Generiere mir zu diesem Text [Text einfügen] fünf möglichst provokante und prägnante Thesen, mit denen Studierende dazu in Diskussion kommen können.</li>
+            <li>Ich mlchte einen Zufallsgenerator zum kreativen Schreiben entwickeln. Gib mir eine Liste mit je 10 möglichen Schauplätzen, beteiligten Rollen, Gegenständen und einer Zeit. Sei damit kreativ!</li>
         </ul>
     </details>
 
