--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </p>
     </article>
     <details>
-        <summary>Exemplarische Prompts</summary>
+        <summary>🔗 Exemplarische Prompts</summary>
         <ul>
             <li>Erstelle eine Zusammenfassung der wichtigsten Theorien zu [Thema] in maximal 300 Wörtern und in einfacher Sprache.</li>
             <li>Generiere 10 Multiple-Choice-Fragen mit jeweils vier Antwortmöglichkeiten zu [Thema] für eine Selbstlerneinheit zu dem folgendes Videotranskript. [Transkript einfügen].</li>
@@ -34,7 +34,7 @@
         </p>
     </article>
     <details>
-        <summary>Exemplarische Prompts</summary>
+        <summary>🔗 Exemplarische Prompts</summary>
         <ul>
             <li>Erkläre mir [Thema], so als wäre ich eine Person ohne Vorwissen. Gib mir immer nur eine kurze Info und lasse mich dann nachfragen.</li>
             <li>Stelle mir nacheinander fünf Verständnisfragen zu diesem wissenschaftlichen Artikel [Artikel einfügen] und gib mir nach jeder Antwort ein Feedback.</li>
@@ -51,10 +51,13 @@
         </p>
     </article>
     <details>
-        <summary>Exemplarische Prompts</summary>
+        <summary>🔗 Exemplarische Prompts</summary>
         <ul>
             <li>Generiere mir zu diesem Text [Text einfügen] fünf möglichst provokante und prägnante Thesen, mit denen Studierende dazu in Diskussion kommen können.</li>
-            <li>Ich mlchte einen Zufallsgenerator zum kreativen Schreiben entwickeln. Gib mir eine Liste mit je 10 möglichen Schauplätzen, beteiligten Rollen, Gegenständen und einer Zeit. Sei damit kreativ!</li>
+            <li>Ich möchte einen Zufallsgenerator zum kreativen Schreiben entwickeln. Gib mir eine Liste mit je 10 möglichen Schauplätzen, beteiligten Rollen, Gegenständen und einer Zeit. Sei damit kreativ!</li>
+            <li>Gib mir eine Liste mit 10 Vorschlägen im Sinne der 'Kopfstand'-Methode, wie ein Studium garantiert nicht erfolgreich sein wird. Ich möchte diese Liste an Studierende geben und sie zum Kopfstand zurück herausfordern.</li>
+            <li>Hier ist eine Liste mit 20 Lernformaten. Erstelle daraus 10 kreative Kombinationen und beschreibe sie kurz. Bei jeder Kombination sollen mindestens zwei Lernformate kombiniert werden.</li>
+            <li>Erstelle mir eine Liste mit 20 Personas von Studierenden. Hier ist ein Muster [Muster einfügen]</li>
         </ul>
     </details>
 
@@ -65,13 +68,12 @@
         </p>
     </article>
     <details>
-        <summary>Exemplarische Prompts</summary>
+        <summary>🔗 Exemplarische Prompts</summary>
         <ul>
-            <li>Lass uns eine Debatte führen: Du vertrittst die Pro-Seite zu [Thema], ich die Contra-Seite.</li>
-            <li>Spiele die Rolle eines kritischen Wissenschaftlers, der meine Argumente zu [Thema] hinterfragt.</li>
+            <li>Lass uns eine Debatte führen: Du vertrittst die Pro-Seite zu [Thema], ich die Contra-Seite. Du nennst immer ein Argument und fragst mich dann nach Erwiderung.</li>
             <li>Lass uns gemeinsam eine kreative Geschichte entwickeln, die das Konzept von [Thema] veranschaulicht. Ich beginne mit einem Satz, dann bist du dran.</li>
-            <li>Stelle mir eine komplexe ethische Dilemma-Situation zu [Thema] und diskutiere mit mir mögliche Lösungen.</li>
-            <li>Ich werde eine innovative Lösung für [Problemstellung] vorschlagen, und du gibst mir konstruktives Feedback mit Verbesserungsvorschlägen.</li>
+            <li>Lass uns ein Spiel spielen: Unsere Herausforderung lautet: [Herausforderung einfügen]. Du teilst eine Idee, wie wir diese Herausforderung garantiert nicht erreichen und fragst mich, ob mir noch eine dümmere Idee einfällt. So geht es hin und her bis ich Stopp schreibe .</li>
+            <li>Ich beschreibe dir eine pädagogische Situation. Du überlegst dir, wie du diese Situation mit der SCAMPER-Methode verändern kannst. Ich nenne dir dazu einen Buchstaben von SCAMPER und du teilst deine Idee dazu. Dann forderst du mich mit einem anderen Buchstaben heraus. .</li>
         </ul>
     </details>
 
