--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <main class="container">
     <h1>Mensch-Maschine Interaktion zwischen Kreation/ Reproduktion und Synchronität/ Asynchronität</h1>
 
-    <h2>1. Reproduktion und asynchron: Lehrmaterialersteller*in</h2>
+    <p>Hinweis vorab: Die exemplarischen Prompts auf dieser Seite sollen die jeweilige Grundidee illustrieren. Sie sind nicht destailliert ausformuliert und kontextualisiert.</p>
+    <h2>1. Reproduktion und asynchron: KI ist Lehrmaterialersteller*in</h2>
     <article>
         <p>
             <strong>Grundidee:</strong> KI unterstützt bei der Erstellung und Aufbereitung von Lehrmaterialien, um Wissen strukturiert zu vermitteln. Dabei können insbesondere auch personalisierte Materialien generiert werden. Hilfreich ist es, bestehende Inhalte in den Prompt zu integrieren, so dass diese den Anforderungen entsprechend aufbereitet werden.
@@ -27,7 +28,7 @@
         </ul>
     </details>
 
-    <h2>2. Reproduktion und synchron: Lerntutor*in</h2>
+    <h2>2. Reproduktion und synchron: KI ist Lerntutor*in</h2>
     <article>
         <p>
             <strong>Grundidee:</strong> Die KI agiert als interaktive Tutorin, beantwortet Fragen, erklärt Konzepte und gibt Rückmeldungen in Echtzeit. Hier interagieren Lernende direkt mit der KI. Sie selbst oder lehrende Personen können Musterlösungen ergänzen.
@@ -44,7 +45,7 @@
         </ul>
     </details>
 
-    <h2>3. Kreation und asynchron: Impulsgeber*in</h2>
+    <h2>3. Kreation und asynchron: KI ist Impulsgeber*in</h2>
     <article>
         <p>
             <strong>Grundidee:</strong> KI liefert kreative Denkanstöße, alternative Perspektiven und neue Ideen für Lern- und Lehrkontexte. Mit diesen Impulsen können Einzelpersonen oder Lerngruppen dann in Interaktion treten.
@@ -61,7 +62,7 @@
         </ul>
     </details>
 
-    <h2>4. Kreation und synchron: Spielpartner*in</h2>
+    <h2>4. Kreation und synchron: KI ist Spielpartner*in</h2>
     <article>
         <p>
             <strong>Grundidee:</strong> KI wird als interaktive, kreative Gesprächspartnerin genutzt, um Ideen zu entwickeln, Argumente zu testen oder Rollenspiele durchzuführen.
