--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </ol>
     </p>
     <p>Eure Überlegungen könnt ihr in diesem Mindwendel dokumentieren.</p>
-    <p><a href="index.html"><button>Zum Mindwendel</button></a></p>        
+    <p><a href="https://idea.kits.blog/brainstormings/82845649-6610-4557-b568-b4c2ac5e1e4f"><button>Zum Mindwendel</button></a></p>        
 </main>
 <footer class="container">
     <small>Erstellt im <a href="https://ebildungslabor.de">eBildungslabor</a> von Nele auf Basis <a href="https://ebildungslabor.de/blog/paedagogische-einordnung-von-ki-nutzung-zwischen-kreation-und-reproduktion/">dieses ausführlichen Blogbeitrags:</a> •
