--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <main class="container">
     <h1>Mensch-Maschine Interaktion zwischen Kreation/ Reproduktion und Synchronität/ Asynchronität</h1>
 
-    <p>Hinweis vorab: Die exemplarischen Prompts auf dieser Seite sollen die jeweilige Grundidee illustrieren. Sie sind nicht destailliert ausformuliert und kontextualisiert.</p>
+    <p>Hinweis vorab: Die exemplarischen Prompts auf dieser Seite sollen die jeweilige Grundidee illustrieren. Sie sind nicht detailliert ausformuliert und kontextualisiert.</p>
     <h2>1. Reproduktion und asynchron: KI ist Lehrmaterialersteller*in</h2>
     <article>
         <p>
@@ -20,7 +20,6 @@
     <details>
         <summary>🔗 Exemplarische Prompts</summary>
         <ul>
-            <li>Erstelle eine Zusammenfassung der wichtigsten Theorien zu [Thema] in maximal 300 Wörtern und in einfacher Sprache.</li>
             <li>Generiere 10 Multiple-Choice-Fragen mit jeweils vier Antwortmöglichkeiten zu [Thema] für eine Selbstlerneinheit zu dem folgendes Videotranskript. [Transkript einfügen].</li>
             <li>Formuliere ein Glossar zu den folgenden 15 Begriffen: [Begriffe einfügen] aus dem Themengebiet [Themengebiet einfügen]. Zielgruppe sind Studierende in den Anfangssemestern. Hier ist ein Muster für den ersten Begriff: [Muster]. Orientiere dich für die weiteren Begriffe daran.</li>
             <li>Erstelle eine Übersichtstabelle mit den Gemeinsamkeiten und Unterschieden zwischen [Theorie A] und [Theorie B]. Verwende dazu die beigefügten Texte.</li>
@@ -58,23 +57,23 @@
             <li>Ich möchte einen Zufallsgenerator zum kreativen Schreiben entwickeln. Gib mir eine Liste mit je 10 möglichen Schauplätzen, beteiligten Rollen, Gegenständen und einer Zeit. Sei damit kreativ!</li>
             <li>Gib mir eine Liste mit 10 Vorschlägen im Sinne der 'Kopfstand'-Methode, wie ein Studium garantiert nicht erfolgreich sein wird. Ich möchte diese Liste an Studierende geben und sie zum Kopfstand zurück herausfordern.</li>
             <li>Hier ist eine Liste mit 20 Lernformaten. Erstelle daraus 10 kreative Kombinationen und beschreibe sie kurz. Bei jeder Kombination sollen mindestens zwei Lernformate kombiniert werden.</li>
-            <li>Erstelle mir eine Liste mit 20 Personas von Studierenden. Hier ist ein Muster [Muster einfügen]</li>
+            <li>Erstelle mir eine Liste mit 20 Personas von Studierenden, die ich anschließend zur Konzeption meiner Lehre verwenden kann. Hier ist ein Muster für solch eine Persona: [Muster einfügen]</li>
         </ul>
     </details>
 
     <h2>4. Kreation und synchron: KI ist Spielpartner*in</h2>
     <article>
         <p>
-            <strong>Grundidee:</strong> KI wird als interaktive, kreative Gesprächspartnerin genutzt, um Ideen zu entwickeln, Argumente zu testen oder Rollenspiele durchzuführen.
+            <strong>Grundidee:</strong> KI wird als interaktive, kreative Gesprächspartnerin genutzt, um Ideen zu entwickeln, Argumente zu testen oder Rollenspiele durchzuführen. Es geht dabei um Förderung des divergenten Denkens.
         </p>
     </article>
     <details>
         <summary>🔗 Exemplarische Prompts</summary>
         <ul>
-            <li>Lass uns eine Debatte führen: Du vertrittst die Pro-Seite zu [Thema], ich die Contra-Seite. Du nennst immer ein Argument und fragst mich dann nach Erwiderung.</li>
             <li>Lass uns gemeinsam eine kreative Geschichte entwickeln, die das Konzept von [Thema] veranschaulicht. Ich beginne mit einem Satz, dann bist du dran.</li>
             <li>Lass uns ein Spiel spielen: Unsere Herausforderung lautet: [Herausforderung einfügen]. Du teilst eine Idee, wie wir diese Herausforderung garantiert nicht erreichen und fragst mich, ob mir noch eine dümmere Idee einfällt. So geht es hin und her bis ich Stopp schreibe .</li>
             <li>Ich beschreibe dir eine pädagogische Situation. Du überlegst dir, wie du diese Situation mit der SCAMPER-Methode verändern kannst. Ich nenne dir dazu einen Buchstaben von SCAMPER und du teilst deine Idee dazu. Dann forderst du mich mit einem anderen Buchstaben heraus. .</li>
+            <li>Wir spielen ein Spiel namens 'Warum?'. Ich beginne mit einer Aussage zu [Thema] und stelle dazu eine 'Warum'-Frage. Du antwortest darauf und stellst wiederum eine 'Warum'-Frage zu deiner Antwort. Wir setzen diesen Prozess fort, bis wir fünfmal 'Warum' gefragt haben. Wenn ich 'Stopp' sage, fassen wir gemeinsam die gewonnenen Erkenntnisse zusammen. Bist du bereit?</li>
         </ul>
     </details>
 
