--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Mensch-Maschine Interaktion zwischen Kreation/ Reproduktion und Synchronität/ Asynchronität</h1>
 
     <p>Hinweis vorab: Die exemplarischen Prompts auf dieser Seite sollen die jeweilige Grundidee illustrieren. Sie sind nicht detailliert ausformuliert und kontextualisiert.</p>
-    <h2>1. Reproduktion und asynchron: KI ist Lehrmaterialersteller*in</h2>
+    <h2>1. Reproduktion und asynchron: KI ist Materialersteller*in</h2>
     <article>
         <p>
-            <strong>Grundidee:</strong> KI unterstützt bei der Erstellung und Aufbereitung von Lehrmaterialien, um Wissen strukturiert zu vermitteln. Dabei können insbesondere auch personalisierte Materialien generiert werden. Hilfreich ist es, bestehende Inhalte in den Prompt zu integrieren, so dass diese den Anforderungen entsprechend aufbereitet werden.
+            <strong>Grundidee:</strong> KI unterstützt bei der Erstellung und Aufbereitung von Materialien, um Wissen strukturiert zu vermitteln. Dabei können insbesondere auch personalisierte Materialien generiert werden. Hilfreich ist es, bestehende Inhalte in den Prompt zu integrieren, so dass diese den Anforderungen entsprechend aufbereitet werden.
         </p>
     </article>
     <details>
@@ -27,10 +27,10 @@
         </ul>
     </details>
 
-    <h2>2. Reproduktion und synchron: KI ist Lerntutor*in</h2>
+    <h2>2. Reproduktion und synchron: KI ist Tutor*in</h2>
     <article>
         <p>
-            <strong>Grundidee:</strong> Die KI agiert als interaktive Tutorin, beantwortet Fragen, erklärt Konzepte und gibt Rückmeldungen in Echtzeit. Hier interagieren Lernende direkt mit der KI. Sie selbst oder lehrende Personen können Musterlösungen ergänzen.
+            <strong>Grundidee:</strong> Die KI agiert als interaktive Tutorin, beantwortet Fragen, erklärt Konzepte und gibt Rückmeldungen in Echtzeit. Hier interagieren Lernende direkt mit der KI.
         </p>
     </article>
     <details>
@@ -40,24 +40,24 @@
             <li>Stelle mir nacheinander fünf Verständnisfragen zu diesem wissenschaftlichen Artikel [Artikel einfügen] und gib mir nach jeder Antwort ein Feedback.</li>
             <li>Ich bin Studentin der Sozialwissenschaften und möchte eine qualitative Befragung durchführen. Meine Forschungsfrage lautet [Forschungsfrage einfügen]. Begleite mich Schritt für Schritt durch die Konzeption und die Durchführung.</li>
             <li>Lass uns ein Quiz spielen: Stelle mir eine Frage zu [Thema], warte auf meine Antwort und sag mir, ob sie richtig oder falsch ist. Nutze die folgenden Dokumente als inhaltliche Grundlage [Dokumente einfügen]</li>
-            <li>Stell dir vor du bist Betreuer meiner Hausarbeit. Dir sind folgende Kriterien wichtig [Kriterien einfügen]. Ich teile mit dir immer Abschnitt für Abschnitt meiner ersten Version der Hausarbeit. Du gibst basierend auf den Kriterien Verbesserungsvorschläge.</li>
+    
         </ul>
     </details>
 
     <h2>3. Kreation und asynchron: KI ist Impulsgeber*in</h2>
     <article>
         <p>
-            <strong>Grundidee:</strong> KI liefert kreative Denkanstöße, alternative Perspektiven und neue Ideen für Lern- und Lehrkontexte. Mit diesen Impulsen können Einzelpersonen oder Lerngruppen dann in Interaktion treten.
+            <strong>Grundidee:</strong> KI liefert kreative Denkanstöße, alternative Perspektiven.
         </p>
     </article>
     <details>
         <summary>🔗 Exemplarische Prompts</summary>
         <ul>
-            <li>Generiere mir zu diesem Text [Text einfügen] fünf möglichst provokante und prägnante Thesen, mit denen Studierende dazu in Diskussion kommen können.</li>
+            <li>Generiere mir zu diesem Text [Text einfügen] fünf möglichst provokante und prägnante Thesen, mit denen  wir in Diskussion kommen können.</li>
             <li>Ich möchte einen Zufallsgenerator zum kreativen Schreiben entwickeln. Gib mir eine Liste mit je 10 möglichen Schauplätzen, beteiligten Rollen, Gegenständen und einer Zeit. Sei damit kreativ!</li>
-            <li>Gib mir eine Liste mit 10 Vorschlägen im Sinne der 'Kopfstand'-Methode, wie ein Studium garantiert nicht erfolgreich sein wird. Ich möchte diese Liste an Studierende geben und sie zum Kopfstand zurück herausfordern.</li>
-            <li>Hier ist eine Liste mit 20 Lernformaten. Erstelle daraus 10 kreative Kombinationen und beschreibe sie kurz. Bei jeder Kombination sollen mindestens zwei Lernformate kombiniert werden.</li>
-            <li>Erstelle mir eine Liste mit 20 Personas von Studierenden, die ich anschließend zur Konzeption meiner Lehre verwenden kann. Hier ist ein Muster für solch eine Persona: [Muster einfügen]</li>
+            <li>Gib mir eine Liste mit 10 Vorschlägen im Sinne der 'Kopfstand'-Methode, wie ein Meeting garantiert nicht erfolgreich sein wird. Ich möchte diese Liste an Mitarbeitende geben und sie zum Kopfstand zurück herausfordern.</li>
+            <li>Hier ist eine Liste mit 20 Ideen. Erstelle daraus 10 kreative Kombinationen und beschreibe sie kurz. Bei jeder Kombination sollen mindestens zwei Ideen kombiniert werden.</li>
+            <li>Erstelle mir eine Liste mit 20 Personas von der Zielgruppe xy, die ich anschließend zur Konzeption eines Angebots für sie verwenden kann. Hier ist ein Muster für solch eine Persona: [Muster einfügen]</li>
         </ul>
     </details>
 
@@ -72,21 +72,12 @@
         <ul>
             <li>Lass uns gemeinsam eine kreative Geschichte entwickeln, die das Konzept von [Thema] veranschaulicht. Ich beginne mit einem Satz, dann bist du dran.</li>
             <li>Lass uns ein Spiel spielen: Unsere Herausforderung lautet: [Herausforderung einfügen]. Du teilst eine Idee, wie wir diese Herausforderung garantiert nicht erreichen und fragst mich, ob mir noch eine dümmere Idee einfällt. So geht es hin und her bis ich Stopp schreibe .</li>
-            <li>Ich beschreibe dir eine pädagogische Situation. Du überlegst dir, wie du diese Situation mit der SCAMPER-Methode verändern kannst. Ich nenne dir dazu einen Buchstaben von SCAMPER und du teilst deine Idee dazu. Dann forderst du mich mit einem anderen Buchstaben heraus. .</li>
+            <li>Ich beschreibe dir eine Situation. Du überlegst dir, wie du diese Situation mit der SCAMPER-Methode verändern kannst. Ich nenne dir dazu einen Buchstaben von SCAMPER und du teilst deine Idee dazu. Dann forderst du mich mit einem anderen Buchstaben heraus. .</li>
             <li>Wir spielen ein Spiel namens 'Warum?'. Ich beginne mit einer Aussage zu [Thema] und stelle dazu eine 'Warum'-Frage. Du antwortest darauf und stellst wiederum eine 'Warum'-Frage zu deiner Antwort. Wir setzen diesen Prozess fort, bis wir fünfmal 'Warum' gefragt haben. Wenn ich 'Stopp' sage, fassen wir gemeinsam die gewonnenen Erkenntnisse zusammen. Bist du bereit?</li>
         </ul>
     </details>
 
-    <h3>👉 Jetzt seid ihr dran!</h3>
-    <p>
-        <ol>
-            <li>Stellt sicher, dass alle in eurer Gruppe das Koordinatensystem und die sich daraus ergebenden Prompting-Möglichkeiten grundsätzlich verstanden haben.</li>
-            <li>Transfer: Wo, wie und warum könntet ihr diese Ansätze in eurem Kontext umsetzen?</li>
-            <li>Was sind weitere Ideen?</li>
-        </ol>
-    </p>
-    <p>Eure Überlegungen könnt ihr in diesem Mindwendel dokumentieren.</p>
-    <p><a href="https://idea.kits.blog/brainstormings/82845649-6610-4557-b568-b4c2ac5e1e4f"><button>Zum Mindwendel</button></a></p>        
+     
 </main>
 <footer class="container">
     <small>Erstellt im <a href="https://ebildungslabor.de">eBildungslabor</a> von Nele auf Basis <a href="https://ebildungslabor.de/blog/paedagogische-einordnung-von-ki-nutzung-zwischen-kreation-und-reproduktion/">dieses ausführlichen Blogbeitrags:</a> •
